Take overflow: clip into account when computing table overflow https://bugs.webkit.org/show_bug.cgi?id=251909

Reviewed by Alan Baradlay.

When computing table overflow overflow: clip should be treated like overflow: hidden:
https://github.com/w3c/csswg-drafts/pull/7492/files

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-clip-rounded-table-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-clip-rounded-table.html: Added.
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjust const):

Canonical link: https://commits.webkit.org/264849@main